# tentacle

./: .gitignore  Dockerfile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
tentacle/: __init__.py  __main__.py  config.py  downloader.py  lidarr.py  matcher.py  qobuz.py  ranker.py  service.py  tidal.py
