[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tentacle"
version = "0.1.0"
description = "Automated service for downloading wanted Lidarr tracks via Tidal"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "mutagen>=1.47",
    "thefuzz>=0.22",
    "python-Levenshtein>=0.25",
]

[project.scripts]
tentacle = "tentacle.__main__:main"
